discussion/kv_engine/141436/141436_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-32670 [4/4]: Allow clients supporting Snappy to bgFetch items as compressed

When scheduling a bgFetch for a cookie which supports Snappy
compression, request that the bgFetch uses
ValueFilter::COMPRESSED_VALUE, to avoid unnecessarily decompressing
the item.

This results in both the item restored to the HashTable and the item
returned to the client being in Snappy-compressed format.

Change-Id: Id1f3f4731d9fb7de38588c0510fde2c592768f63

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-12-03 16:36:49.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-03 16:49:37.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32327/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\warmup.cc(565): error C2672: "std::make_unique": no matching overloaded function found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32327/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27859/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.cc:565:35:
error: no matching function for call to "make_unique"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27859/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6067/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/warmup.cc:565:35: error: no matching function for call to "make_unique" [clang-diagnostic-error]
            bg_itm_ctx.addBgFetch(std::make_unique<FrontEndBGFetchItem>(
                                  ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/unique_ptr.h:820:5: note: candidate template ignored: substitution failure [with _Tp = FrontEndBGFetchItem]: deduced incomplete pack <(no value), ValueFilter> for template parameter "_Args"
    make_unique(_Args&&... __args)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/unique_ptr.h:832:5: note: candidate template ignored: substitution failure [with _Tp = FrontEndBGFetchItem]: no type named "__invalid_type" in "std::_MakeUniq<FrontEndBGFetchItem>"
    make_unique(_Args&&...) = delete;
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/unique_ptr.h:826:5: note: candidate function template not viable: requires single argument "__num", but 2 arguments were provided
    make_unique(size_t __num)
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6067/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/warmup.cc:565:35:
error: no matching function for call to "make_unique" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6067/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6593/ : FAILURE

Compile error at [2020-12-03T16:39:01.972Z] ../kv_engine/engines/ep/src/warmup.cc:565:35:
error: no matching function for call to "make_unique"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6593/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7530/ : FAILURE

Compile error at [2020-12-03T16:45:08.945Z] ../kv_engine/engines/ep/src/warmup.cc:566:71:
error: no matching function for call to ?make_unique<FrontEndBGFetchItem>(<brace-enclosed initializer list>, ValueFilter)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7530/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7652/ : FAILURE

Compile error at [2020-12-03T16:38:40.500Z] ../kv_engine/engines/ep/src/warmup.cc:566:71:
error: no matching function for call to ?make_unique<FrontEndBGFetchItem>(<brace-enclosed initializer list>, ValueFilter)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7652/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7922/ : FAILURE

Compile error at [2020-12-03T16:39:45.243Z] ../kv_engine/engines/ep/src/warmup.cc:565:35:
error: no matching function for call to "make_unique"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15465/ : FAILURE

Compile error at [2020-12-03T16:41:26.186Z] ../kv_engine/engines/ep/src/warmup.cc:565:35:
error: no matching function for call to "make_unique"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15465/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4601/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
